--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.project-auditor": "1.0.0",
     "com.unity.render-pipelines.high-definition": "14.0.11",
