--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.cinemachine": "2.10.3",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.project-auditor": "1.0.0",
     "com.unity.render-pipelines.high-definition": "14.0.11",
